<resources>
    <string name="app_name">IceRockPractice</string>
    <string name="logo_description">Logo</string>
    <string name="token_field_hint">Personal access token</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="retry_button">Retry</string>
    <string name="no_connection_icon_description">No connection icon</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_body">Check your Internet connection</string>
    <string name="folder_icon_description">Folder icon</string>
    <string name="empty_title">Empty</string>
    <string name="empty_body">No repositories at the moment</string>
    <string name="refresh_button">Refresh</string>
    <string name="error_icon_description">Error Icon</string>
    <string name="something_error_title">Something error</string>
    <string name="check_your_something_body">Check your something</string>
    <string name="scales_icon_description">Scales icon</string>
    <string name="license_caption">License</string>
    <string name="star_icon_description">Star icon</string>
    <string name="stars_caption">stars</string>
    <string name="link_icon_description">Link icon</string>
    <string name="fork_icon_description">Fork icon</string>
    <string name="forks_caption">forks</string>
    <string name="watch_icon_description">Watch icon</string>
    <string name="watchers_caption">watchers</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure want to logout?</string>
    <string name="logout_dialog_positive_button">Yes</string>
    <string name="logout_dialog_negative_button">No</string>
    <string name="error_dialog_positive_button">Ok</string>
    <string name="error_dialog_title">Error</string>
    <string name="repositories_fragment_title">Repositories</string>
    <string name="authorization_fragment_caption">Authorization</string>
    <string name="server_not_responding_message">Server not responding…</string>
    <string name="connection_error_message">Connection error.</string>
    <string name="undescribed_error_message">Undescribed error:</string>
    <string name="enter_the_token_message">Enter the token.</string>
    <string name="invalid_token_message">Invalid token.</string>
    <string name="no_readme_text">No README.md</string>
</resources>