<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/no_connection_icon"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_no_connection"
        android:contentDescription="@string/no_connection_icon_description"
        app:layout_constraintBottom_toTopOf="@id/no_connection_title"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/no_connection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/no_connection_icon"
        app:layout_constraintStart_toStartOf="@id/no_connection_icon"
        app:layout_constraintEnd_toEndOf="@id/no_connection_icon"
        app:layout_constraintBottom_toTopOf="@id/no_connection_description"
        android:textColor="?attr/colorError"
        android:textSize="16sp"
        android:text="@string/connection_error_title" />

    <TextView
        android:id="@+id/no_connection_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/no_connection_title"
        app:layout_constraintStart_toStartOf="@id/no_connection_title"
        app:layout_constraintEnd_toEndOf="@id/no_connection_title"
        app:layout_constraintBottom_toTopOf="@id/retry_button"
        android:text="@string/connection_error_body"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry_button"
        style="@style/GitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/retry_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>