<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modules.repos.modules.details.presentation.DetailInfoFragment">

    <ScrollView
        android:id="@+id/details_scroll_container"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/link_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/repo_link"
                app:layout_constraintBottom_toBottomOf="@id/repo_link"
                android:contentDescription="@string/link_icon_description"
                android:src="@drawable/ic_link"
                app:tint="?attr/colorSecondary"/>

            <TextView
                android:id="@+id/repo_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/link_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                android:text=""/>

            <ImageView
                android:id="@+id/scales_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="@id/link_icon"
                app:layout_constraintTop_toBottomOf="@id/repo_link"
                android:src="@drawable/ic_scales"
                app:tint="@color/white"
                android:contentDescription="@string/scales_icon_description"/>

            <TextView
                android:id="@+id/license_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/scales_icon"
                app:layout_constraintStart_toEndOf="@id/scales_icon"
                app:layout_constraintBottom_toBottomOf="@id/scales_icon"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:text="@string/license_caption"/>

            <TextView
                android:id="@+id/license_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@id/license_caption"
                app:layout_constraintTop_toTopOf="@id/scales_icon"
                app:layout_constraintEnd_toEndOf="@id/repo_link"
                app:layout_constraintBottom_toBottomOf="@id/scales_icon"
                app:layout_constraintHorizontal_bias="1"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                android:text="@string/license_caption"/>

            <!--stargazers block-->
            <LinearLayout
                android:id="@+id/stars_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/scales_icon"
                app:layout_constraintStart_toStartOf="@id/link_icon">
                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    app:tint="@color/git_yellow"
                    android:contentDescription="@string/star_icon_description"/>

                <TextView
                    android:id="@+id/stars_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/git_yellow"
                    android:textSize="16sp"
                    android:text=""/>

                <TextView
                    android:id="@+id/stars_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:text="@string/stars_caption"/>

            </LinearLayout>

            <!--forks block-->
            <LinearLayout
                android:id="@+id/forks_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/scales_icon"
                app:layout_constraintStart_toStartOf="@id/link_icon">
                <ImageView
                    android:id="@+id/fork_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fork"
                    app:tint="@color/git_lime"
                    android:contentDescription="@string/fork_icon_description"/>

                <TextView
                    android:id="@+id/forks_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/git_lime"
                    android:textSize="16sp"
                    android:text=""/>

                <TextView
                    android:id="@+id/forks_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:text="@string/forks_caption"/>

            </LinearLayout>

            <!--watches block-->
            <LinearLayout
                android:id="@+id/watches_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/scales_icon"
                app:layout_constraintStart_toStartOf="@id/link_icon">
                <ImageView
                    android:id="@+id/watch_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye"
                    app:tint="@color/git_diamond"
                    android:contentDescription="@string/watch_icon_description"/>

                <TextView
                    android:id="@+id/watches_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="@color/git_diamond"
                    android:textSize="16sp"
                    android:text=""/>

                <TextView
                    android:id="@+id/watches_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:text="@string/watchers_caption"/>

            </LinearLayout>

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/info_flow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@id/scales_icon"
                app:layout_constraintStart_toStartOf="@id/link_icon"
                app:layout_constraintEnd_toEndOf="@id/repo_link"
                app:constraint_referenced_ids="stars_group, forks_group, watches_group"
                app:flow_horizontalBias="0"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="chain"
                app:flow_horizontalGap="16dp"
                app:flow_verticalGap="6dp"/>

            <com.emelyanov.markdownview.MarkdownView
                android:id="@+id/readme_view"
                android:layout_width="0dp"
                android:layout_marginVertical="20dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/info_flow"
                app:layout_constraintStart_toStartOf="@id/info_flow"
                app:layout_constraintEnd_toEndOf="@id/info_flow"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="WebViewLayout" />

            <ProgressBar
                android:id="@+id/readme_progressbar"
                style="@style/GitProgressbar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/info_flow"
                app:layout_constraintStart_toStartOf="@id/info_flow"
                app:layout_constraintEnd_toEndOf="@id/info_flow"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/repo_progressbar"
        style="@style/GitProgressbar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/repo_error_state"
        layout="@layout/repos_error_state"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_scroll_container"
        android:visibility="gone"/>

    <include
        android:id="@+id/repo_connection_error_state"
        layout="@layout/repos_connection_error_state"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_scroll_container"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>